crates/core/tests/ui/proc/svc/ctor_rval_bad_self.stderr
error[E0080]: evaluation panicked: This method looks like a constructor, but does not return ffi::Result<Self, _>
  --> tests/ui/proc/svc/ctor_rval_bad_self.rs:13:12
   |
13 |     pub fn create() -> ffi::Result<u8, Error> {
   |            ^^^^^^ evaluation of `_` failed here
